updated temp home page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Game Log Test Page</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>Temporay Home Page</h1>
+<p>This is a temporary home page for the Game Log Project.</p>
 
 </body>
 </html>
