Added registration form

--- a/registration.html
+++ b/registration.html
@@ -1,4 +1,10 @@
-<form>
+<!DOCTYPE html>
+<html>
+  <head>
+    <Title>Register</Title>
+  </head>
+  <body>
+    <form>
   <label for="fname">First name:</label><br>
     <input type="text" id="fname" name="fname"><br>
   <label for="lname">Last name:</label><br>
@@ -14,3 +20,6 @@
   <label for="confirm">Confirm password:</label><br>
     <input type="text" id="confirm" name="confirm">
 </form>
+  </body>
+</html>
+
