--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 </head>
 <body>
 
-<h1></h1>
+<h1>Temporary Home Page</h1>
 <p>This is a temporary home page for the Game Log Project.</p>
+
+<a href="registration.html">Create an account</a>
 
 </body>
 </html>
