Added registration link

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <h1>Temporay Home Page</h1>
 <p>This is a temporary home page for the Game Log Project.</p>
+<p><a href=registration.html>Create an account</a></p>
 
 </body>
 </html>
