--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <h1>Temporary Home Page</h1>
 <p>This is a temporary home page for the Game Log Project.</p>
-<p><a href=registration.html>Create an account</a></p>
+<p><a href="registration.html">Create an account</a></p>
 
 </body>
 </html>
