Added favicon to the reg form. Also removed <br>

--- a/registration.html
+++ b/registration.html
@@ -2,23 +2,25 @@
 <html>
   <head>
     <Title>Register</Title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body>
     <form>
-  <label for="fname">First name:</label><br>
-    <input type="text" id="fname" name="fname"><br>
-  <label for="lname">Last name:</label><br>
+  <label for="fname">First name:</label>
+    <input type="text" id="fname" name="fname">
+  <label for="lname">Last name:</label>
     <input type="text" id="lname" name="lname">
-  <label for="dob">Date of Birth:</label><br>
+  <label for="dob">Date of Birth:</label>
     <input type="text" id="dob" name="dob">
-  <label for="email">Email:</label><br>
+  <label for="email">Email:</label>
     <input type="text" id="email" name="email">
-  <label for="username">Username:</label><br>
+  <label for="username">Username:</label>
     <input type="text" id="username" name="username">
-  <label for="password">Password:</label><br>
+  <label for="password">Password:</label>
     <input type="text" id="password" name="password">
-  <label for="confirm">Confirm password:</label><br>
+  <label for="confirm">Confirm password:</label>
     <input type="text" id="confirm" name="confirm">
+  <input type="submit" value="Submit">
 </form>
   </body>
 </html>
