--- a/registration.html
+++ b/registration.html
@@ -6,19 +6,19 @@
   </head>
   <body>
     <form>
-  <label for="fname">First name:</label>
-    <input type="text" id="fname" name="fname">
-  <label for="lname">Last name:</label>
+  <label for="fname">First name:</label><br>
+    <input type="text" id="fname" name="fname"><br>
+  <label for="lname">Last name:</label><br>
     <input type="text" id="lname" name="lname">
-  <label for="dob">Date of Birth:</label>
+  <label for="dob">Date of Birth:</label><br>
     <input type="text" id="dob" name="dob">
-  <label for="email">Email:</label>
+  <label for="email">Email:</label><br>
     <input type="text" id="email" name="email">
-  <label for="username">Username:</label>
+  <label for="username">Username:</label><br>
     <input type="text" id="username" name="username">
-  <label for="password">Password:</label>
+  <label for="password">Password:</label><br>
     <input type="text" id="password" name="password">
-  <label for="confirm">Confirm password:</label>
+  <label for="confirm">Confirm password:</label><br>
     <input type="text" id="confirm" name="confirm">
   <input type="submit" value="Submit">
 </form>
