Added more linebreaks

--- a/registration.html
+++ b/registration.html
@@ -9,17 +9,17 @@
   <label for="fname">First name:</label><br>
     <input type="text" id="fname" name="fname"><br>
   <label for="lname">Last name:</label><br>
-    <input type="text" id="lname" name="lname">
+    <input type="text" id="lname" name="lname"><br>
   <label for="dob">Date of Birth:</label><br>
-    <input type="text" id="dob" name="dob">
+    <input type="text" id="dob" name="dob"><br>
   <label for="email">Email:</label><br>
-    <input type="text" id="email" name="email">
+    <input type="text" id="email" name="email"><br>
   <label for="username">Username:</label><br>
-    <input type="text" id="username" name="username">
+    <input type="text" id="username" name="username"><br>
   <label for="password">Password:</label><br>
-    <input type="text" id="password" name="password">
+    <input type="text" id="password" name="password"><br>
   <label for="confirm">Confirm password:</label><br>
-    <input type="text" id="confirm" name="confirm">
+    <input type="text" id="confirm" name="confirm"><br>
   <input type="submit" value="Submit">
 </form>
   </body>
