Added masking to password input

--- a/registration.html
+++ b/registration.html
@@ -16,10 +16,10 @@
     <input type="text" id="email" name="email"><br>
   <label for="username">Username:</label><br>
     <input type="text" id="username" name="username"><br>
-  <label for="password">Password:</label><br>
-    <input type="text" id="password" name="password"><br>
+  <label for="pwd">Password:</label><br>
+    <input type="password" id="pwd" name="pwd"><br>
   <label for="confirm">Confirm password:</label><br>
-    <input type="text" id="confirm" name="confirm"><br>
+    <input type="password" id="pwd" name="pwd"><br>
   <input type="submit" value="Submit">
 </form>
   </body>
