I forgot the submit button, silly me

--- a/resetpwd.html
+++ b/resetpwd.html
@@ -8,6 +8,7 @@
     <form>
         <label for="reset">Confirm your email:</label><br>
           <input type="text" id="confirmEmail" name="confirmEmail"><br>
+          <input type="submit" value="Submit">
     </form>
   </body>
 </html>
