Couldn't Push, Trying Manual

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <h1>Game Log</h1>
 </div>
 <p>This is a temporary home page for the Game Log Project.</p>
-<p><a href="registration.html">Create an account</a></p>
+<p><a href="registration_X.php">Create an account</a></p>
 <a href="login.html">Login to account</a>
 
 </body>
