Index / Login Test

--- a/index.html
+++ b/index.html
@@ -42,15 +42,22 @@
   <li><a class="active" href="index.html">Home</a></li>
   <li><a href="#games">Games</a></li>
   <li><a href="#reviews">Reviews</a></li>
-  <li class="right"><a href="#account">Account</a></li>
+  <li class="right"><a href="#account">Login</a></li>
+  <li class="right"><a href="registration_X.php">Register</a></li>
+  <li class="right"><a href="login_X.php">Account</a></li>
 </ul>
-
-<div style="padding:0 16px;">
-  <h1>Game Log</h1>
+  
+<div class="imgcontainer">
+  <img src="gamelog_logo.png" alt="Avatar" class="avatar">
 </div>
-<p>This is a temporary home page for the Game Log Project.</p>
-<p><a href="registration_X.php">Create an account</a></p>
-<a href="login.html">Login to account</a>
+  
+<div style="padding:0 16px;">
+  
+  <h1>Game Log</h1>
+  <p>This is a temporary home page for the Game Log Project.</p>
+</div>
+
+
 
 </body>
 </html>
