--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
   <li><a class="active" href="index.html">Home</a></li>
   <li><a href="#games">Games</a></li>
   <li><a href="#reviews">Reviews</a></li>
-  <li class="right"><a href="#account">Login</a></li>
+  <li class="right"><a href="#account">Account</a></li>
   <li class="right"><a href="registration_X.php">Register</a></li>
-  <li class="right"><a href="login_X.php">Account</a></li>
+  <li class="right"><a href="login_X.php">Login</a></li>
 </ul>
   
 <div class="imgcontainer">
