--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
     </style>
     <title>Game Log Test Page</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
   </head>
 <body>
   <ul class="topnav">
