Rudimentary Gamelist added

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
   <ul class="topnav">
   <li><a class="active" href="index.html">Home</a></li>
-  <li><a href="#games">Games</a></li>
+  <li><a href="gamelist.php">Games</a></li>
   <li><a href="#reviews">Reviews</a></li>
   <li class="right"><a href="#account">Account</a></li>
   <li class="right"><a href="registration_X.php">Register</a></li>
