added images and start of review page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <ul class="topnav">
   <li><a class="active" href="index.html">Home</a></li>
   <li><a href="gamelist.php">Games</a></li>
-  <li><a href="#reviews">Reviews</a></li>
+  <li><a href="gamelistReviews.php">Reviews</a></li>
   <li class="right"><a href="#account">Account</a></li>
   <li class="right"><a href="registration_X.php">Register</a></li>
   <li class="right"><a href="login_X.php">Login</a></li>
