--- a/login.html
+++ b/login.html
@@ -72,7 +72,7 @@ span.psw {
   <body>
     <h2>Login Form</h2>
 
-    <form action="/index.html" method="post">
+    <form action="/index.php" method="post">
       <div class="imgcontainer">
         <img src="gamelog_logo.png" alt="Avatar" class="avatar">
       </div>
