--- a/login.html
+++ b/login.html
@@ -82,7 +82,7 @@ span.psw {
         <input type="text" placeholder="Enter Username" name="username" required>
 
         <label for="pwd"><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" name="pwd" required>
+        <input type="password" placeholder="Enter Password" name="password" required>
 
         <button type="submit">Login</button>
         <label>
